2010-05-25  Bugfix: text output of DumpMemory() moved to the correct column if (size mod BytesPerLine) != 0
            Added: HDD_GetFileSizeAndInode()
            Added: GetApplVer() returns a pointer to a version string as seen in the information menu

2010-05-26  Version 1.08 of the TMS firmware introduces the UTF-8 encoding of the file system. While the TAP API is transparent
              to this modification, all Linux commands, which access the files on the drive, needed to be modified.
              Added: CharToUTF8(), StrToUTF8()
              Fixed: HDD_GetFileSizeAndInode(), HDD_RemoveDir(), HDD_GetInodeByAbsFileName(), HDD_GetFileTimeByAbsFileName(), HDD_Move()
            Added: StrMkUTF8()
2010-05-28  Added: Unix2TFTime()
2010-07-01  Added: LangGetStringDefault()
2010-07-06  Added: StrToISO(), StrMkISO() and CharToISO()
            Fixed: HDD_GetAbsolutePathByTypeFile() wasn't UTF8 aware. This should fix all functions, which depend
                   on this routine: HDD_TAP_GetIDByIndex(), HDD_GetInodeByTypeFile(), HDD_GetFileTimeByTypeFile()
2010-07-13  Added: a fix for TAP_Hdd_ChangeDir(), which fails to change into directories with German Umlaute. HDD_ChangeDir()
              retries a TAP_Hdd_ChangeDir() with the UTF-8 version of the directory name, if the original name fails.
              All FBLib functions now use HDD_ChangeDir().
2010-07-14  Fixed: Some bugs with the UTF8 to ISO conversion
            Removed: utf8 support has been removed by Korea. Removed all utf8 conversion from the following functions:
              HDD_RemoveDir(), HDD_Move(), HDD_GetInodeByAbsFileName(), HDD_GetInodeByTypeFile(), HDD_GetInodeByRelFileName(),
              HDD_GetFileTimeByAbsFileName(), HDD_GetFileTimeByRelFileName(), HDD_GetFileTimeByTypeFile(), HDD_GetFileSizeAndInode(),
              HDD_GetAbsolutePathByTypeFile(), HDD_TAP_GetIDByIndex(), HDD_GetFileTimeByTypeFile(), HDD_GetInodeByTypeFile()